--- a/Web/index.html
+++ b/Web/index.html
@@ -41,6 +41,35 @@
   	</p>
 
   </div>
+  <div class="table">
+
+	<table>
+		<tr>
+			<th>Matière</th>
+			<th>Volume horaire [h]</th>
+			<th>Coefficient</th>
+		</tr>
+		<tr>
+			<td>Anglais</td>
+			<td>3</td>
+			<td>3</td>
+		</tr>
+		<tr>
+			<td>Maths</td>
+			<td>3</td>
+			<td>3</td>
+		</tr>
+		<tr>
+			<td>Physique</td>
+			<td>4</td>
+			<td>3</td>
+		</tr>
+		<tr>
+			<td>Info. et Réseaux</td>
+			<td>15</td>
+			<td>10</td>
+		</tr>
+  </div>
 
 
 </body>
