--- a/Web/index.html
+++ b/Web/index.html
@@ -31,6 +31,7 @@
 
   <div class="corps">
 
+	<div align="center"><img src="Carnus1.png"></div>
   	<h2>BTS CIEL</h2>
 
   	<p>
@@ -48,6 +49,11 @@
 			<th>Matière</th>
 			<th>Volume horaire [h]</th>
 			<th>Coefficient</th>
+		</tr>
+		<tr></tr>
+			<td>CGE</td>
+			<td>3</td>
+			<td>2</td>
 		</tr>
 		<tr>
 			<td>Anglais</td>
